equistore-core/include/equistore.h


typedef struct eqs_block_t eqs_block_t;
typedef struct eqs_tensormap_t eqs_tensormap_t;
typedef int32_t eqs_status_t;
typedef struct eqs_labels_t {
  void *internal_ptr_;
  const char *const *names;
  const int32_t *values;
  uintptr_t size;
  uintptr_t count;
} eqs_labels_t;
typedef uint64_t eqs_data_origin_t;
typedef struct eqs_sample_mapping_t {
  uintptr_t input;
  uintptr_t output;
} eqs_sample_mapping_t;
typedef struct eqs_array_t {
  void *ptr;
  eqs_status_t (*origin)(const void *array, eqs_data_origin_t *origin);
  eqs_status_t (*data)(void *array, double **data);
  eqs_status_t (*shape)(const void *array, const uintptr_t **shape, uintptr_t *shape_count);
  eqs_status_t (*reshape)(void *array, const uintptr_t *shape, uintptr_t shape_count);
  eqs_status_t (*swap_axes)(void *array, uintptr_t axis_1, uintptr_t axis_2);
  eqs_status_t (*create)(const void *array,
                         const uintptr_t *shape,
                         uintptr_t shape_count,
                         struct eqs_array_t *new_array);
  eqs_status_t (*copy)(const void *array, struct eqs_array_t *new_array);
  void (*destroy)(void *array);
  eqs_status_t (*move_samples_from)(void *output,
                                    const void *input,
                                    const struct eqs_sample_mapping_t *samples,
                                    uintptr_t samples_count,
                                    uintptr_t property_start,
                                    uintptr_t property_end);
} eqs_array_t;
typedef eqs_status_t (*eqs_create_array_callback_t)(const uintptr_t *shape,
                                                    uintptr_t shape_count,
                                                    struct eqs_array_t *array);
void eqs_disable_panic_printing(void);
const char *eqs_version(void);
const char *eqs_last_error(void);
eqs_status_t eqs_labels_position(struct eqs_labels_t labels,
                                 const int32_t *values,
                                 uintptr_t values_count,
                                 int64_t *result);
eqs_status_t eqs_labels_create(struct eqs_labels_t *labels);
eqs_status_t eqs_labels_clone(struct eqs_labels_t labels, struct eqs_labels_t *clone);
eqs_status_t eqs_labels_union(struct eqs_labels_t first,
                              struct eqs_labels_t second,
                              struct eqs_labels_t *result,
                              int64_t *first_mapping,
                              uintptr_t first_mapping_count,
                              int64_t *second_mapping,
                              uintptr_t second_mapping_count);
eqs_status_t eqs_labels_intersection(struct eqs_labels_t first,
                                     struct eqs_labels_t second,
                                     struct eqs_labels_t *result,
                                     int64_t *first_mapping,
                                     uintptr_t first_mapping_count,
                                     int64_t *second_mapping,
                                     uintptr_t second_mapping_count);
eqs_status_t eqs_labels_free(struct eqs_labels_t *labels);
eqs_status_t eqs_register_data_origin(const char *name, eqs_data_origin_t *origin);
eqs_status_t eqs_get_data_origin(eqs_data_origin_t origin, char *buffer, uintptr_t buffer_size);
struct eqs_block_t *eqs_block(struct eqs_array_t data,
                              struct eqs_labels_t samples,
                              const struct eqs_labels_t *components,
                              uintptr_t components_count,
                              struct eqs_labels_t properties);
eqs_status_t eqs_block_free(struct eqs_block_t *block);
struct eqs_block_t *eqs_block_copy(const struct eqs_block_t *block);
eqs_status_t eqs_block_labels(const struct eqs_block_t *block,
                              uintptr_t axis,
                              struct eqs_labels_t *labels);
eqs_status_t eqs_block_gradient(struct eqs_block_t *block,
                                const char *parameter,
                                struct eqs_block_t **gradient);
eqs_status_t eqs_block_data(struct eqs_block_t *block, struct eqs_array_t *data);
eqs_status_t eqs_block_add_gradient(struct eqs_block_t *block,
                                    const char *parameter,
                                    struct eqs_block_t *gradient);
eqs_status_t eqs_block_gradients_list(const struct eqs_block_t *block,
                                      const char *const **parameters,
                                      uintptr_t *parameters_count);
struct eqs_tensormap_t *eqs_tensormap(struct eqs_labels_t keys,
                                      struct eqs_block_t **blocks,
                                      uintptr_t blocks_count);
eqs_status_t eqs_tensormap_free(struct eqs_tensormap_t *tensor);
struct eqs_tensormap_t *eqs_tensormap_copy(const struct eqs_tensormap_t *tensor);
eqs_status_t eqs_tensormap_keys(const struct eqs_tensormap_t *tensor, struct eqs_labels_t *keys);
eqs_status_t eqs_tensormap_block_by_id(struct eqs_tensormap_t *tensor,
                                       struct eqs_block_t **block,
                                       uintptr_t index);
eqs_status_t eqs_tensormap_blocks_matching(const struct eqs_tensormap_t *tensor,
                                           uintptr_t *block_indexes,
                                           uintptr_t *count,
                                           struct eqs_labels_t selection);
struct eqs_tensormap_t *eqs_tensormap_keys_to_properties(const struct eqs_tensormap_t *tensor,
                                                         struct eqs_labels_t keys_to_move,
                                                         bool sort_samples);
struct eqs_tensormap_t *eqs_tensormap_components_to_properties(struct eqs_tensormap_t *tensor,
                                                               const char *const *dimensions,
                                                               uintptr_t dimensions_count);
struct eqs_tensormap_t *eqs_tensormap_keys_to_samples(const struct eqs_tensormap_t *tensor,
                                                      struct eqs_labels_t keys_to_move,
                                                      bool sort_samples);
struct eqs_tensormap_t *eqs_tensormap_load(const char *path,
                                           eqs_create_array_callback_t create_array);
eqs_status_t eqs_tensormap_save(const char *path, const struct eqs_tensormap_t *tensor);