equistore/src/c_api.rs

pub type eqs_create_array_callback_t = ::std::option::Option<
    unsafe extern "C" fn(
        shape: *const usize,
        shape_count: usize,
        array: *mut eqs_array_t,
    ) -> eqs_status_t,
>;
extern "C" {
    pub fn eqs_disable_panic_printing();
    pub fn eqs_version() -> *const ::std::os::raw::c_char;
    pub fn eqs_last_error() -> *const ::std::os::raw::c_char;
    #[must_use]
    pub fn eqs_labels_position(
        labels: eqs_labels_t,
        values: *const i32,
        values_count: usize,
        result: *mut i64,
    ) -> eqs_status_t;
    #[must_use]
    pub fn eqs_labels_create(labels: *mut eqs_labels_t) -> eqs_status_t;
    #[must_use]
    pub fn eqs_labels_clone(labels: eqs_labels_t, clone: *mut eqs_labels_t) -> eqs_status_t;
    #[must_use]
    pub fn eqs_labels_union(
        first: eqs_labels_t,
        second: eqs_labels_t,
        result: *mut eqs_labels_t,
        first_mapping: *mut i64,
        first_mapping_count: usize,
        second_mapping: *mut i64,
        second_mapping_count: usize,
    ) -> eqs_status_t;
    #[must_use]
    pub fn eqs_labels_intersection(
        first: eqs_labels_t,
        second: eqs_labels_t,
        result: *mut eqs_labels_t,
        first_mapping: *mut i64,
        first_mapping_count: usize,
        second_mapping: *mut i64,
        second_mapping_count: usize,
    ) -> eqs_status_t;
    #[must_use]
    pub fn eqs_labels_free(labels: *mut eqs_labels_t) -> eqs_status_t;
    #[must_use]
    pub fn eqs_register_data_origin(
        name: *const ::std::os::raw::c_char,
        origin: *mut eqs_data_origin_t,
    ) -> eqs_status_t;
    #[must_use]
    pub fn eqs_get_data_origin(
        origin: eqs_data_origin_t,
        buffer: *mut ::std::os::raw::c_char,
        buffer_size: usize,
    ) -> eqs_status_t;
    pub fn eqs_block(
        data: eqs_array_t,
        samples: eqs_labels_t,
        components: *const eqs_labels_t,
        components_count: usize,
        properties: eqs_labels_t,
    ) -> *mut eqs_block_t;
    #[must_use]
    pub fn eqs_block_free(block: *mut eqs_block_t) -> eqs_status_t;
    pub fn eqs_block_copy(block: *const eqs_block_t) -> *mut eqs_block_t;
    #[must_use]
    pub fn eqs_block_labels(
        block: *const eqs_block_t,
        axis: usize,
        labels: *mut eqs_labels_t,
    ) -> eqs_status_t;
    #[must_use]
    pub fn eqs_block_gradient(
        block: *mut eqs_block_t,
        parameter: *const ::std::os::raw::c_char,
        gradient: *mut *mut eqs_block_t,
    ) -> eqs_status_t;
    #[must_use]
    pub fn eqs_block_data(block: *mut eqs_block_t, data: *mut eqs_array_t) -> eqs_status_t;
    #[must_use]
    pub fn eqs_block_add_gradient(
        block: *mut eqs_block_t,
        parameter: *const ::std::os::raw::c_char,
        gradient: *mut eqs_block_t,
    ) -> eqs_status_t;
    #[must_use]
    pub fn eqs_block_gradients_list(
        block: *const eqs_block_t,
        parameters: *mut *const *const ::std::os::raw::c_char,
        parameters_count: *mut usize,
    ) -> eqs_status_t;
    pub fn eqs_tensormap(
        keys: eqs_labels_t,
        blocks: *mut *mut eqs_block_t,
        blocks_count: usize,
    ) -> *mut eqs_tensormap_t;
    #[must_use]
    pub fn eqs_tensormap_free(tensor: *mut eqs_tensormap_t) -> eqs_status_t;
    pub fn eqs_tensormap_copy(tensor: *const eqs_tensormap_t) -> *mut eqs_tensormap_t;
    #[must_use]
    pub fn eqs_tensormap_keys(
        tensor: *const eqs_tensormap_t,
        keys: *mut eqs_labels_t,
    ) -> eqs_status_t;
    #[must_use]
    pub fn eqs_tensormap_block_by_id(
        tensor: *mut eqs_tensormap_t,
        block: *mut *mut eqs_block_t,
        index: usize,
    ) -> eqs_status_t;
    #[must_use]
    pub fn eqs_tensormap_blocks_matching(
        tensor: *const eqs_tensormap_t,
        block_indexes: *mut usize,
        count: *mut usize,
        selection: eqs_labels_t,
    ) -> eqs_status_t;
    pub fn eqs_tensormap_keys_to_properties(
        tensor: *const eqs_tensormap_t,
        keys_to_move: eqs_labels_t,
        sort_samples: bool,
    ) -> *mut eqs_tensormap_t;
    pub fn eqs_tensormap_components_to_properties(
        tensor: *mut eqs_tensormap_t,
        dimensions: *const *const ::std::os::raw::c_char,
        dimensions_count: usize,
    ) -> *mut eqs_tensormap_t;
    pub fn eqs_tensormap_keys_to_samples(
        tensor: *const eqs_tensormap_t,
        keys_to_move: eqs_labels_t,
        sort_samples: bool,
    ) -> *mut eqs_tensormap_t;
    pub fn eqs_tensormap_load(
        path: *const ::std::os::raw::c_char,
        create_array: eqs_create_array_callback_t,
    ) -> *mut eqs_tensormap_t;
    #[must_use]
    pub fn eqs_tensormap_save(
        path: *const ::std::os::raw::c_char,
        tensor: *const eqs_tensormap_t,
    ) -> eqs_status_t;
}
